add: keyboard layout de

--- a/config
+++ b/config
@@ -3,8 +3,8 @@ export RELEASE=buster
 export DEPLOY_ZIP=1
 export LOCALE_DEFAULT=de_DE.UTF-8
 export TARGET_HOSTNAME=mpc-os
-export KEYBOARD_KEYMAP=us
-export KEYBOARD_LAYOUT="English (US)"
+export KEYBOARD_KEYMAP=de
+export KEYBOARD_LAYOUT="Deutsch"
 export TIMEZONE_DEFAULT=Europe/Berlin
 export FIRST_USER_NAME=mpc
 export FIRST_USER_PASS=mpc
