--- a/.github/workflows/build-image.yml
+++ b/.github/workflows/build-image.yml
@@ -8,14 +8,21 @@ on:
 jobs:
   build-sks-hello:
     name: Build mpc-os image
-    runs-on: ubuntu-20.04
+    runs-on: ubuntu-16.04
 
     steps:
       - name: Checkout code
         uses: actions/checkout@v2
 
+      - name: Install dependencies
+        run: >
+          sudo apt-get install \
+          coreutils quilt parted qemu-user-static debootstrap zerofree zip \
+          dosfstools bsdtar libcap2-bin grep rsync xz-utils file git curl bc \
+          qemu-utils kpartx
+
       - name: Build image
-        run: ./build-docker.sh
+        run: ./build.sh
 
       - name: Release image
         uses: softprops/action-gh-release@v1
