--- a/.github/workflows/build-image.yml
+++ b/.github/workflows/build-image.yml
@@ -16,10 +16,10 @@ jobs:
 
       - name: Install dependencies
         run: >
-          sudo apt-get install \
-          coreutils quilt parted qemu-user-static debootstrap zerofree zip \
-          dosfstools bsdtar libcap2-bin grep rsync xz-utils file git curl bc \
-          qemu-utils kpartx
+          sudo apt-get install
+            coreutils quilt parted qemu-user-static debootstrap zerofree zip
+            dosfstools bsdtar libcap2-bin grep rsync xz-utils file git curl bc
+            qemu-utils kpartx
 
       - name: Build image
         run: ./build.sh
