add: dockerfile dependencies

--- a/.github/workflows/build-image.yml
+++ b/.github/workflows/build-image.yml
@@ -16,7 +16,8 @@ jobs:
 
       - name: Install dependencies
         run: >
-          sudo apt-get install
+          sudo apt-get -y update &&
+          sudo apt-get -y install --no-install-recommends
           git vim parted
           quilt coreutils qemu-user-static debootstrap zerofree zip dosfstools
           bsdtar libcap2-bin rsync grep udev xz-utils curl xxd file kmod bc
