add: xxd binary

--- a/.github/workflows/build-image.yml
+++ b/.github/workflows/build-image.yml
@@ -16,11 +16,11 @@ jobs:
 
       - name: Install dependencies
         run: >
-          sudo apt-get -y update &&
-          sudo apt-get -y install --no-install-recommends
+          cp ./xxd /usr/bin/xxd &&
+          sudo apt-get install --no-install-recommends
           git vim parted
           quilt coreutils qemu-user-static debootstrap zerofree zip dosfstools
-          bsdtar libcap2-bin rsync grep udev xz-utils curl xxd file kmod bc
+          bsdtar libcap2-bin rsync grep udev xz-utils curl file kmod bc
           binfmt-support ca-certificates qemu-utils kpartx
 
 
